# phased_array

./: .gitignore  README.md  pyproject.toml  scratch.py
docs/: conf.py
notebooks/: array.ipynb
phased_array/: __init__.py  phased_array.py
test/: test_phased_array.py
